cluster-services/prometheus/bluey/ingress-prometheus.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus
  namespace: prometheus
spec:
  rules:
    - host: prometheus.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  name: web
